# direwolf

./: .gitattributes  .gitignore  99-direwolf-cmedia.rules  CHANGES.md  CHANGES.txt  CMakeLists.txt  LICENSE  Makefile  Makefile-linux.mk  Makefile-macosx.mk  Makefile.FreeBSD  Makefile.linux  Makefile.macosx  Makefile.openbsd  Makefile.win  README.md  aclients.c  aprs_tt.c  aprs_tt.h  atest.c  audio.c  audio.h  audio_portaudio.c  audio_ptt.c  audio_ptt.h  audio_ptt_win.c  audio_stats.c  audio_stats.h  audio_win.c  ax25_link.c  ax25_link.h  ax25_pad.c  ax25_pad.h  ax25_pad2.c  ax25_pad2.h  beacon.c  beacon.h  cdigipeater.c  cdigipeater.h  cm108.c  (+131 more)
.github/workflows/: ccpp.yml  ci.yml  codeql-analysis-python.yml  codeql-analysis.yml
cmake/cpack/: CMakeLists.txt  direwolf.desktop.in  direwolf.rc
cmake/include/: uninstall.cmake.in
cmake/modules/: FindAvahi.cmake  FindCPUflags.cmake  FindCompiler.cmake  FindGPSD.cmake  FindPortaudio.cmake  Findgpiod.cmake  Findhamlib.cmake  Findhidapi.cmake  Findsndio.cmake  Findudev.cmake
conf/: 99-direwolf-cmedia.rules  CMakeLists.txt  direwolf.txt  generic.conf  install_conf.cmake
data/: CMakeLists.txt  README.txt  symbols-new.txt  tocalls.txt  tocalls.yaml
debian/: README.Debian  control  copyright  direwolf.postinst  direwolf.postrm  rules
doc/: CMakeLists.txt  README.md
geotranz/: error_string.h  mgrs.c  mgrs.h  polarst.c  polarst.h  readme.txt  tranmerc.c  tranmerc.h  ups.c  ups.h  usng.c  usng.h  utm.c  utm.h
man/: CMakeLists.txt  atest.1  direwolf.1  gen_packets.1  kissutil.1  log2gpx.1  tt2text.1
man1/: aclients.1  atest.1  decode_aprs.1  direwolf.1  gen_packets.1  kissutil.1  ll2utm.1  log2gpx.1  text2tt.1  tt2text.1  utm2ll.1
misc/: README-dire-wolf.txt  strcasestr.c  strlcat.c  strlcpy.c  strsep.c  strtok_r.c
regex/: README-dire-wolf.txt  regcomp.c
rpm/: direwolf.spec
scripts/: CMakeLists.txt  dw-start.sh
scripts/telemetry-toolkit/: CMakeLists.txt  telem-balloon.conf  telem-balloon.pl  telem-bits.pl  telem-data.pl  telem-eqns.pl  telem-m0xer-3.txt  telem-seq.sh  telem-unit.pl  telem-volts.conf  telem-volts.py
src/: CMakeLists.txt  aclients.c  agwlib.c  agwlib.h  ais.c  ais.h  appserver.c  aprs_tt.c  aprs_tt.h  atest.c  audio.c  audio.h  audio_portaudio.c  audio_stats.c  audio_win.c  ax25_link.c  ax25_link.h  ax25_pad.c  ax25_pad.h  ax25_pad2.c  bch.c  bch.h  bch3.c  bch3a.c  bchapply.c  beacon.c  cdigipeater.c  cdigipeater.h  cm108.c  cm108.h  cm108_set_gpio.c  config.c  config.h  decode_aprs.c  decode_aprs.h  decoded.sorted  dedupe.h  demod.c  demod.h  demod_9600.c  (+120 more)
systemd/: direwolf.logrotate  direwolf.service  direwolf.sysconfig
telemetry-toolkit/: telem-data91.pl  telem-parm.pl  telem-seq.sh  telem-volts.conf  telem-volts.py
test/: CMakeLists.txt
test/scripts/: check-fx25  check-il2p  check-modem1200  check-modem1200-i  check-modem19200  check-modem2400-a  check-modem2400-b  check-modem2400-g  check-modem300  check-modem4800  check-modem9600  check-modem9600-i  check-modemeas
utm/: LatLong-UTMconversion.c  LatLong-UTMconversion.h  README.txt  SwissGrid.cpp  UTMConversions.cpp  constants.h
